<?xml version="1.0"?>
<package>
  <name>cslibs_kdtree</name>
  <version>0.0.1</version>
  <description>
    The kd-tree package contains a template-based generic kdtree library.
    Essentially any data type can be used with the library.
  </description>
  
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>
  <author email="philipp.kuhlmann@student.uni-tuebingen.de">kuhlmann</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
